--- a/gradle.properties
+++ b/gradle.properties
@@ -6,18 +6,18 @@ org.gradle.warning.mode = all
 ##########################################################################
 # Standard Fabric Dependencies
 # Check these on https://fabricmc.net/develop/
-minecraft_version = 1.19.4
-yarn_mappings = 1.19.4+build.1
-loader_version = 0.14.17
-# Fabric API
-fabric_version = 0.76.0+1.19.4
+minecraft_version=1.19.2
+yarn_mappings=1.19.2+build.28
+loader_version=0.14.19
+#Fabric api
+fabric_version=0.76.0+1.19.2
 loom_version = 1.1-SNAPSHOT
 java_version = 17
 ##########################################################################
 # Mod Properties
 mod_version = 1.0.0
-maven_group = com.author
-archives_base_name = mod-name
+maven_group = de.luisbeu.sort_savvy
+archives_base_name = sort_savvy
 ##########################################################################
 # Kotlin Dependencies
 systemProp.kotlin_version = 1.8.10
