--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -12,6 +12,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
+          distribution: "temurin"
           java-version: "17"
       - name: "Build with Gradle"
         id: build
@@ -23,5 +24,5 @@ jobs:
           game_endpoint: "minecraft"
           relations: "fabric-api:requiredDependency"
           game_versions: "Minecraft 1.19:1.19.2,Java 17,Fabric"
-          project_id: "0"
+          project_id: "852994"
           token: "${{ secrets.CF_API_TOKEN }}"
