--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -12,17 +12,18 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
-          distribution: "temurin"
-          java-version: "17"
-      - name: "Build with Gradle"
-        id: build
-        run: "chmod +x gradlew && ./gradlew build publish"
-      - name: "Upload to CurseForge"
+          distribution: temurin
+          java-version: 17
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
+      - name: Execute Gradle build
+        run: ./gradlew clean build
+      - name: Upload to CurseForge
         uses: itsmeow/curseforge-upload@v3
         with:
-          file_path: "build/libs/sort_savvy-${{ steps.build.outputs.version }}.jar"
-          game_endpoint: "minecraft"
-          relations: "fabric-api:requiredDependency"
-          game_versions: "Minecraft 1.19:1.19.2,Java 17,Fabric"
-          project_id: "852994"
-          token: "${{ secrets.CF_API_TOKEN }}"
+          file_path: build/libs/sort_savvy-${{ steps.build.outputs.version }}.jar
+          game_endpoint: minecraft
+          relations: fabric-api:requiredDependency
+          game_versions: Minecraft 1.19:1.19.2,Java 17,Fabric
+          project_id: 852994
+          token: ${{ secrets.CF_API_TOKEN }}
