--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -21,6 +21,7 @@ jobs:
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
       - name: Execute Gradle build
+        id: build
         run: chmod +x gradlew && ./gradlew clean build
       - name: Upload to CurseForge
         uses: itsmeow/curseforge-upload@v3
