--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -21,12 +21,14 @@ jobs:
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
       - name: Execute Gradle build
-        id: build
+        id: gradlew-build
         run: chmod +x gradlew && ./gradlew clean build
+      - name: Get color
+        run: echo "Version is ${{ steps.gradlew-build.outputs.version }}"
       - name: Upload to CurseForge
         uses: itsmeow/curseforge-upload@v3
         with:
-          file_path: build/libs/sort_savvy-${{ steps.build.outputs.version }}.jar
+          file_path: build/libs/sort_savvy-${{ steps.gradlew-build.outputs.version }}.jar
           game_endpoint: minecraft
           relations: fabric-api:requiredDependency
           game_versions: ${{env.VERSIONS}}
