--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -6,7 +6,6 @@ on:
       - created
 
 env:
-  VERSIONS: Minecraft 1.19:1.19.2,Java 17,Fabric
   JAVA_VERSION: 17
 
 jobs:
@@ -24,13 +23,13 @@ jobs:
         id: gradlew-build
         run: chmod +x gradlew && ./gradlew clean build
       - name: Get color
-        run: echo "Version is ${{ steps.gradlew-build.outputs.version }}"
+        run: echo "Version is ${{ steps.gradlew-build.outputs.MOD_VERSION }}"
       - name: Upload to CurseForge
         uses: itsmeow/curseforge-upload@v3
         with:
-          file_path: build/libs/sort_savvy-${{ steps.gradlew-build.outputs.version }}.jar
+          file_path: build/libs/sort_savvy-${{ steps.gradlew-build.outputs.MOD_VERSION }}.jar
           game_endpoint: minecraft
           relations: fabric-api:requiredDependency
-          game_versions: ${{env.VERSIONS}}
+          game_versions: Minecraft ${{ steps.gradlew-build.outputs.MINECRAFT_VERSION }},Java ${{ steps.gradlew-build.outputs.JAVA_VERSION }},Fabric
           project_id: 852994
           token: ${{ secrets.CF_API_TOKEN }}
