--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -5,9 +5,6 @@ on:
     types:
       - created
 
-env:
-  JAVA_VERSION: 17
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -16,14 +13,12 @@ jobs:
       - uses: actions/setup-java@v3
         with:
           distribution: temurin
-          java-version: ${{env.JAVA_VERSION}}
+          java-version: 17
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
       - name: Execute Gradle build
         id: gradlew-build
         run: chmod +x gradlew && ./gradlew clean build
-      - name: Get color
-        run: echo "Version is ${{ steps.gradlew-build.outputs.MOD_VERSION }}"
       - name: Upload to CurseForge
         uses: itsmeow/curseforge-upload@v3
         with:
