--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -19,12 +19,17 @@ jobs:
       - name: Execute Gradle build
         id: gradlew-build
         run: chmod +x gradlew && ./gradlew clean build
+      - uses: jungwinter/split@v2
+        id: split
+        with:
+          msg: ${{ steps.gradlew-build.outputs.MINECRAFT_VERSION }}
+          separator: .
       - name: Upload to CurseForge
         uses: itsmeow/curseforge-upload@v3
         with:
           file_path: build/libs/sort_savvy-${{ steps.gradlew-build.outputs.MOD_VERSION }}.jar
           game_endpoint: minecraft
           relations: fabric-api:requiredDependency
-          game_versions: Minecraft ${{ steps.gradlew-build.outputs.MINECRAFT_VERSION }},Java ${{ steps.gradlew-build.outputs.JAVA_VERSION }},Fabric
+          game_versions: Minecraft ${{ steps.split.outputs._0 }}.${{ steps.split.outputs._1 }}:${{ steps.gradlew-build.outputs.MINECRAFT_VERSION }},Java ${{ steps.gradlew-build.outputs.JAVA_VERSION }},Fabric
           project_id: 852994
           token: ${{ secrets.CF_API_TOKEN }}
