add config and auth

--- a/gradle.properties
+++ b/gradle.properties
@@ -23,3 +23,7 @@ archives_base_name = sort_savvy
 systemProp.kotlin_version = 1.8.10
 fabric_language_kotlin_version = 1.9.2+kotlin.1.8.10
 ##########################################################################
+# Other Dependencies
+ktor_version = 2.2.4
+owo_version = 0.9.3+1.19
+##########################################################################
