--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 ##########################################################################
 # Standard Properties
-kotlin.code.style = official
-org.gradle.jvmargs = -Xmx2G
-org.gradle.warning.mode = all
+kotlin.code.style=official
+org.gradle.jvmargs=-Xmx2G
+org.gradle.warning.mode=all
 ##########################################################################
 # Standard Fabric Dependencies
 # Check these on https://fabricmc.net/develop/
@@ -11,20 +11,20 @@ yarn_mappings=1.19.2+build.28
 loader_version=0.14.22
 # Fabric api
 fabric_version=0.76.1+1.19.2
-loom_version = 1.1-SNAPSHOT
-java_version = 17
+loom_version=1.1-SNAPSHOT
+java_version=17
 ##########################################################################
 # Mod Properties
-mod_version = 1.1.0
-maven_group = de.luisbeu.sort_savvy
-archives_base_name = sort_savvy
-create_version = 0.5.1-c-build.1160+mc1.19.2
-modmenu_version = 4.2.0-beta.2
+mod_version=1.1.0
+maven_group=de.luisbeu.sort_savvy
+archives_base_name=sort_savvy
+create_version=0.5.1-c-build.1160+mc1.19.2
+modmenu_version=4.2.0-beta.2
 ##########################################################################
 # Kotlin Dependencies
-systemProp.kotlin_version = 1.8.10
-fabric_language_kotlin_version = 1.9.2+kotlin.1.8.10
+systemProp.kotlin_version=1.8.10
+fabric_language_kotlin_version=1.9.2+kotlin.1.8.10
 ##########################################################################
 # Other Dependencies
-ktor_version = 2.3.4
+ktor_version=2.3.4
 ##########################################################################
